Issue#324.  Replaced Laravel package that wrapped full calendar with API endpoint and reference to CDN for fullcalendar 5.6.0

--- a/resources/assets/css/dark-theme.css
+++ b/resources/assets/css/dark-theme.css
@@ -199,6 +199,10 @@ li.selected:hover {
   background-color: #ecab7e;
 }
 
+#event-repo th.fc-day {
+	background-color: #df691a;
+  }
+
 .material-icons.md-18 { font-size: 18px; }
 .material-icons.md-24 { font-size: 24px; }
 .material-icons.md-36 { font-size: 36px; }
